Fix spacing between spreadsheet and download link
It was too far apart.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -149,6 +149,8 @@ details summary {
 
 .spreadsheet {
 
+  margin-bottom: -$gutter;
+
   th,
   .table-field-index {
     background: $grey-4;
